@@ -66,10 +66,10 @@ int basic_test (ACE_DLL &dll)
 {
 
   ACE_TString dll_file;
-  const ACE_TCHAR *subdir_env = ACE_OS::getenv (ACE_TEXT ("ACE_EXE_SUB_DIR"));
+  const char *subdir_env = ACE_OS::getenv ("ACE_EXE_SUB_DIR");
   if (subdir_env)
     {
-      dll_file = subdir_env;
+      dll_file = ACE_TEXT_CHAR_TO_TCHAR (subdir_env);
       dll_file += ACE_DIRECTORY_SEPARATOR_STR;
     }
 
